# serializer version: 1
# name: TransferUpdatesManagementCommandTest.test_asp_test
  '''
  Using *TEST* JSON serializers (SIRET number mapping)
  Connected to: django_tests@foobar.com
  Current remote dir is: PWD
  Employee record notifications processing done!
  
  '''
# ---
# name: TransferUpdatesManagementCommandTest.test_download[download]
  '''
  Connected to: django_tests@foobar.com
  Current remote dir is: PWD
  Starting DOWNLOAD of employee record notifications
  Fetching file: RIAE_FS_20210927000000_FichierRetour.json
  Parsed 1/1 files
  Deleting 'RIAE_FS_20210927000000_FichierRetour.json' from SFTP server
  Employee record notifications processing done!
  
  '''
# ---
# name: TransferUpdatesManagementCommandTest.test_download[upload]
  '''
  Connected to: django_tests@foobar.com
  Current remote dir is: PWD
  Starting UPLOAD of 1 notification(s)
  Successfully uploaded: RIAE_FS_20210927000000.json
  Employee record notifications processing done!
  
  '''
# ---
# name: TransferUpdatesManagementCommandTest.test_dry_run_empty_download
  '''
  DRY-RUN mode
  Connected to: django_tests@foobar.com
  Current remote dir is: PWD
  Starting DOWNLOAD of employee record notifications
  No new feedback file found
  Employee record notifications processing done!
  
  '''
# ---
# name: TransferUpdatesManagementCommandTest.test_dry_run_upload
  '''
  DRY-RUN mode
  Connected to: django_tests@foobar.com
  Current remote dir is: PWD
  Starting UPLOAD of 1 notification(s)
  
  '''
# ---
# name: TransferUpdatesManagementCommandTest.test_preflight_without_error
  '''
  DRY-RUN mode
  Preflight activated, checking for possible serialization errors...
  Found 1 object(s) to check, split in chunks of 700 objects.
  Checking file #1 (chunk of 1 objects)
  All serializations ok, you may skip preflight...
  
  '''
# ---
# name: TransferUpdatesManagementCommandTest.test_preflight_without_object
  '''
  DRY-RUN mode
  Preflight activated, checking for possible serialization errors...
  No object to check. Exiting preflight.
  
  '''
# ---
# name: TransferUpdatesManagementCommandTest.test_upload
  '''
  Connected to: django_tests@foobar.com
  Current remote dir is: PWD
  Starting UPLOAD of 1 notification(s)
  Successfully uploaded: RIAE_FS_20210927000000.json
  Employee record notifications processing done!
  
  '''
# ---
# name: TransferUpdatesManagementCommandTest.test_wrong_environment
  '''
  Your environment is missing ASP_FS_SFTP_HOST to run this command.
  
  '''
# ---
